# rtv1

./: CMakeLists.txt  add_ob.c  add_od.c  close.c  cone.c  ft_free.c  helper.c  helper2.c  hud.c  init.c  keys.c  keys2.c  light.c  main.c  mouse.c  obj.c  obj_form.c  pr.c  render.c
inc/: rtv1.h
libft/: Makefile  author  clean  ft_atoi.c  ft_bzero.c  ft_fill_list.c  ft_findichar.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstfree.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstpushback.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memdel_arr.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  (+33 more)
